Fixed whitespace regex.  Started adding the Types section.

--- a/Binding4DOM.css
+++ b/Binding4DOM.css
@@ -15,7 +15,7 @@
 .toc ul li {
   list-style-type: none;
 }
-.bnf {
+.terminal {
   font-family: monospace;
   background: #ddd;
 }
@@ -61,4 +61,10 @@ table.grammar td {
 .nt-attr {
   font-style: italic;
   font-size: 85%;
+}
+.idltype {
+  font-weight: bold;
+}
+.esvalue, .estype {
+  font-weight: bold;
 }
